--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,13 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
+    testCompile 'junit:junit:4.12'
+
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    testCompile 'junit:junit:4.12'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+
+
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
 }
